[package]
name = "yrs-postgres"
version = "0.2.0"
edition = "2024"
description = "Simple store layer over Yrs documents"
license = "MIT"
authors = ["icode<intelligentcodemail@gmail.com>"]
keywords = ["crdt", "yrs", "persistence", "store", "postgresql"]
homepage = "https://github.com/icode/yrs-store"
repository = "https://github.com/icode/yrs-store"
readme = "./README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "chrono", "runtime-tokio"] }
async-stream = "0.3.6"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
yrs = { version = "0.23", features = ["sync", "weak"] }
async-trait = "0.1.88"

yrs-store = { version = "0.2", path = "../yrs-store" }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres"] }
serde_json = "1.0.140"
